# pipeline-check

./: .dockerignore  .gitattributes  .gitignore  .pipelinecheckignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  _d1.txt  _hooks.txt  _inspect.txt  _reflog.txt  _st.txt  _x.txt  action.yml  mkdocs.yml  pyproject.toml  requirements-ci.in  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements.in  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  DOCKERHUB.md  PULL_REQUEST_TEMPLATE.md  coveragerc-no-fleet  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: codacy.yml  codeql.yml  docker-publish.yml  docs.yml  dogfood.yml  goat-bench.yml  localstack-test.yml  pypi-publish.yml  python-app.yml  release.yml  scorecard.yml
_site_test/: 404.html  index.html  sitemap.xml
_site_test/_fence_test/: index.html
_site_test/attack_chains/: index.html
_site_test/ci_gate/: index.html
_site_test/config/: index.html
_site_test/output/: index.html
_site_test/providers/: index.html
_site_test/scoring_model/: index.html
_site_test/search/: search_index.json
_site_test/standards/: index.html
_site_test/stylesheets/: extra.css
_site_test/usage/: index.html
bench/: COMPARISON.md  README.md  goat_runner.py  goats.yml  run.py
bench/goats/: .gitignore  README.md
docs/: README.md  _protection_check.md  architecture.md  attack_chains.md  ci_gate.md  comparison.md  config.md  contributing_first_rule.md  fleet.md  goat_bench.md  history.md  index.md  mcp.md  output.md  pr_diff.md  scoring_model.md  stability.md  threatmodel.md  usage.md  vscode.md  writing_a_chain.md  writing_a_custom_rule.md  writing_a_provider.md  writing_a_rego_rule.md  writing_a_rule.md
docs/_overrides/: home.html  main.html
docs/javascripts/: animations.js  tablesort.js
docs/owasp_top_10_cicd_security_risks/: owasp_references.md
docs/providers/: README.md  argo.md  argocd.md  aws.md  azure.md  azure_cloud.md  bitbucket.md  buildkite.md  cargo.md  circleci.md  cloudbuild.md  cloudformation.md  composer.md  devenv.md  dockerfile.md  drone.md  gcp.md  gitea.md  github.md  gitlab.md  gitlab_group.md  gitlab_runs.md  gomod.md  harness.md  helm.md  jenkins.md  kubernetes.md  maven.md  modelfile.md  npm.md  nuget.md  oci.md  pulumi.md  pypi.md  registries.md  rubygems.md  runs.md  scm.md  scm_bitbucket.md  scm_github.md  (+4 more)
docs/standards/: README.md  cis_aws_foundations.md  cis_azure_foundations.md  cis_gcp_foundations.md  cis_github.md  cis_kubernetes.md  cis_supply_chain.md  esf_supply_chain.md  nist_800_190.md  nist_800_53.md  nist_csf_2.md  nist_ssdf.md  openssf_scorecard.md  oscr.md  owasp_cicd_top_10.md  pci_dss_v4.md  s2c2f.md  slsa.md  soc2.md
docs/stylesheets/: _design_tokens.css  extra.css
hooks/: mkdocs_design_tokens.py  mkdocs_provider_stats.py  mkdocs_standards_stats.py  mkdocs_version.py
infra/: main.tf  providers.tf
infra/bad/: main.tf  providers.tf
overrides/: home.html  main.html
overrides/partials/: tabs-item.html
pipeline_check/: __init__.py  __main__.py  cli.py  cli_aux_commands.py  cli_completion.py  cli_hints.py  cli_info_commands.py  cli_ops_commands.py  cli_paths.py  cli_scan_output.py  lambda_handler.py
pipeline_check/core/: _design_tokens.css  _yaml_strict.py  ai_explain.py  autofix.py  codequality_reporter.py  config.py  csv_reporter.py  cyclonedx_reporter.py  detect.py  diff.py  explain.py  fix_apply.py  fix_pr.py  fleet.py  fleet_html.py  fp_annotations.py  gate.py  github_annotations_reporter.py  history.py  html_reporter.py  init_scan.py  init_template.py  inline_ignore.py  inventory.py  jsonl_reporter.py  junit_reporter.py  manual.py  markdown_reporter.py  openvex.py  openvex_reporter.py  pipeline_graph.py  pipeline_graph_builders.py  policies.py  pr_diff.py  pr_diff_reporter.py  provenance.py  report_view.py  reporter.py  sarif_ingest.py  sarif_reporter.py  (+8 more)
pipeline_check/lsp/: __init__.py  __main__.py  detection.py  diagnostics.py  scan.py  server.py
pipeline_check/mcp_server/: __init__.py  server.py  tools.py
pipelineguard/: cli.py  lambda_handler.py
pipelineguard/core/: scanner.py
scripts/: _apply_american_english.py  _fix_generics.py  build_lambda.sh  clone_standards_mapping.py  gen_attack_chains_doc.py  gen_provider_docs.py  gen_standards_docs.py  gen_standards_mappings.py  link_standards_check_ids.py  new_rule.py  preflight.py  sync_doc_claims.py
tests/: _chain_helpers.py  _check_ids.py  conftest.py  report_schema.json  schema_validators.py  test_ai_explain.py  test_argo_taint.py  test_attack_chains.py  test_attack_chains_doc.py  test_attack_chains_table_in_sync.py  test_autofix.py  test_autofix_safety.py  test_azure_scenarios.py  test_bench.py  test_best_practice.py  test_bitbucket_scenarios.py  test_brand_leak.py  test_bug_fixes.py  test_buildkite_taint.py  test_chain_xpc001.py  test_chain_xpc002.py  test_chain_xpc003.py  test_chain_xpc004.py  test_chain_xpc005.py  test_chain_xpc006.py  test_chain_xpc007.py  test_chain_xpc008.py  test_chain_xpc009.py  test_chain_xpc010.py  test_chain_xpc_mechanical.py  test_circleci_phase5.py  test_cli.py  test_cli_branches.py  test_cli_docs_drift.py  test_cli_ease_of_use.py  test_cli_explain.py  test_cli_fix.py  test_cli_help_improvements.py  test_cli_ingest.py  test_cli_list_fixers.py  (+137 more)
tests/argo/: conftest.py  test_aggregate_locations.py  test_argo018.py  test_argo019.py  test_audit_regressions.py  test_graph.py  test_rules.py
tests/argocd/: conftest.py  test_argocd019.py  test_audit_regressions.py  test_rules.py  test_rules_010_to_013.py  test_rules_014_to_017.py  test_rules_016_018.py
tests/aws/: conftest.py  test_codebuild.py  test_codedeploy.py  test_codepipeline.py  test_ecr.py  test_iam.py  test_integration_rules.py  test_owasp_pipeline.py  test_pbac.py  test_provider_build_context.py  test_s3.py
(+2671 files in other folders)
