[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-check"
version = "0.3.3"
description = "CI/CD Security Posture Scanner — scores AWS, Terraform, CloudFormation, GitHub Actions, GitLab CI, Azure DevOps, Bitbucket Pipelines, Jenkins, CircleCI, Google Cloud Build, and Dockerfile against OWASP Top 10 CI/CD Risks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Martin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
pipeline_check = "pipeline_check.cli:main"

[project.urls]
Homepage = "https://github.com/dmartinochoa/pipeline-check"
Repository = "https://github.com/dmartinochoa/pipeline-check"
Issues = "https://github.com/dmartinochoa/pipeline-check/issues"
Changelog = "https://github.com/dmartinochoa/pipeline-check/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["pipeline_check*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"pipeline_check/core/html_reporter.py" = ["E501"]  # inline CSS/JS templates
"pipeline_check/core/checks/base.py" = ["E402"]    # deferred re import after dataclass
"scripts/gen_provider_docs.py" = ["E402"]          # sys.path setup before pipeline_check import
"tests/**" = ["E501"]                               # test strings often exceed line length

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Strict-mode flags we can enable without touching the rule packs.
# Full ``strict = true`` adds ``disallow_any_generics`` /
# ``disallow_untyped_defs`` etc. that would require ~300 mechanical
# annotations across the AWS / Terraform / CloudFormation rule
# modules — that's its own focused PR. The flags below are the
# subset that catches real bugs without that yak-shave:
#   - ``no_implicit_optional`` is the modern default.
#   - ``warn_redundant_casts`` flags ``cast()`` calls that already
#     match the inferred type.
#   - ``warn_unused_ignores`` flags ``# type: ignore`` comments that
#     no longer suppress anything (rot from earlier mypy versions).
#   - ``strict_equality`` flags ``==`` between types whose values
#     can never equal (e.g. ``str == bytes``).
#   - ``check_untyped_defs`` type-checks the bodies of unannotated
#     functions instead of skipping them entirely.
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# ``disallow_subclassing_any`` flags class declarations whose base
# resolves to ``Any`` — typically caused by an upstream package
# without type stubs. Two pyyaml ``SafeLoader`` subclasses fall under
# this; they're scoped via the per-module override below.
disallow_subclassing_any = true
# ``disallow_untyped_calls`` makes annotated callers stop silently
# inheriting ``Any`` from unannotated callees. Enabled after
# annotating five helpers (``_parse``, ``_parse_policy``, ``_first``,
# ``_first_map``, ``extract_pipe_ref``) the typed AWS / Terraform /
# CloudFormation / Bitbucket rule code calls into.
disallow_untyped_calls = true
# Silence "Library stubs not installed for X" until requirements-dev.txt
# is regenerated to include types-PyYAML. The runtime behavior is fine;
# this only affects mypy's static checks on yaml.* call sites.
disable_error_code = ["import-untyped"]

# pyyaml ships without type stubs in our hash-locked lockfile, so
# ``yaml.SafeLoader`` resolves to ``Any``. The two project-side
# subclasses (the strict-key DupKeyLoader and the CFN intrinsic-tag
# loader) inherit by design — re-enable subclassing for those modules
# until ``types-PyYAML`` lands in ``requirements-dev.txt``.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core._yaml_strict",
    "pipeline_check.core.checks.cloudformation.base",
]
disallow_subclassing_any = false

# boto3 returns ``Any`` from every paginator and ``client.*`` call.
# Functions in the AWS catalog wrap those responses and declare richer
# return types (e.g. ``list[dict[Any, Any]]``), which trips
# ``warn_return_any`` even though the runtime shape is correct. The
# proper fix is to add ``cast()`` at every site or pull in
# ``boto3-stubs`` for typing. Both are out of scope for now.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core.checks.aws._catalog",
    "pipeline_check.core.checks.aws.workflows",
    "pipeline_check.core.checks.aws.base",
    "pipeline_check.core.providers.aws",
]
disable_error_code = ["no-any-return", "call-overload", "var-annotated", "union-attr", "arg-type"]
