[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-check"
version = "1.0.4"
description = "CI/CD Security Posture Scanner — scores AWS, Terraform, CloudFormation, GitHub Actions, GitLab CI, Azure DevOps, Bitbucket Pipelines, Jenkins, CircleCI, Google Cloud Build, Buildkite, Drone CI, Tekton, Argo Workflows, Dockerfile, Kubernetes manifests, Helm charts, OCI image manifests, SCM repo posture (GitHub / GitLab / Bitbucket), npm and pypi dependency files against OWASP Top 10 CI/CD Risks and 13 other compliance frameworks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Martin" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

# Floor versions only — the hash-locked, reproducible dev install lives
# in ``requirements-dev.txt``. Install via ``make install`` or
# ``pip install --require-hashes -r requirements-dev.txt``. This extra
# is provided so ad-hoc ``pip install -e ".[dev]"`` works for
# contributors who don't want the locked tree.
[project.optional-dependencies]
dev = [
    "jsonschema>=4.0",
    "mypy>=2.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.13",
    "types-PyYAML>=6.0",
    "typing-extensions>=4.4.0",
]
# Opt-in AI augmentation (``--ai-explain CHECK-ID``). Each provider
# is its own extra so the default install carries no LLM SDKs.
# ``ai`` is a meta-extra that pulls in both hosted-provider SDKs at
# once for users who don't want to think about it.
ai-anthropic = ["anthropic>=0.102.0"]
ai-openai = ["openai>=2.37.0"]
ai = [
    "anthropic>=0.102.0",
    "openai>=2.37.0",
]
# Opt-in MCP (Model Context Protocol) server (``--serve``). Lets
# MCP-aware AI clients drive scans and query the rule catalog.
# The default install carries no MCP SDK so the AWS-Lambda /
# minimal-install paths stay slim.
mcp = ["mcp>=1.27.1"]

[project.scripts]
pipeline_check = "pipeline_check.cli:main"

[project.urls]
Homepage = "https://github.com/dmartinochoa/pipeline-check"
Repository = "https://github.com/dmartinochoa/pipeline-check"
Issues = "https://github.com/dmartinochoa/pipeline-check/issues"
Changelog = "https://github.com/dmartinochoa/pipeline-check/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["pipeline_check*"]

# Non-Python data files that must ship in the wheel. Without this
# block the wheel carries only ``.py`` files, which silently
# downgrades the HTML report (no rule docstrings, no shared design
# tokens) and breaks ``html_reporter`` outright when the css file
# is missing. ``package-data`` paths are relative to each package
# root and accept globs.
[tool.setuptools.package-data]
"pipeline_check.core" = ["*.css"]
"pipeline_check.core.checks.aws.rules" = ["*.yml"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"pipeline_check/core/html_reporter.py" = ["E501"]  # inline CSS/JS templates
"pipeline_check/core/checks/base.py" = ["E402"]    # deferred re import after dataclass
"scripts/gen_provider_docs.py" = ["E402"]          # sys.path setup before pipeline_check import
"scripts/gen_standards_docs.py" = ["E402"]         # sys.path setup before pipeline_check import
"tests/**" = ["E501"]                               # test strings often exceed line length

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# All nine strict-mode flags from ``mypy --strict`` are enabled. The
# block below documents which flag did what work; everything beneath
# the bullet list is the per-flag rationale carried over from the
# incremental landings.
#   - ``no_implicit_optional`` is the modern default.
#   - ``warn_redundant_casts`` flags ``cast()`` calls that already
#     match the inferred type.
#   - ``warn_unused_ignores`` flags ``# type: ignore`` comments that
#     no longer suppress anything (rot from earlier mypy versions).
#   - ``strict_equality`` flags ``==`` between types whose values
#     can never equal (e.g. ``str == bytes``).
#   - ``check_untyped_defs`` type-checks the bodies of unannotated
#     functions instead of skipping them entirely.
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# ``disallow_subclassing_any`` flags class declarations whose base
# resolves to ``Any`` — typically caused by an upstream package
# without type stubs. Two pyyaml ``SafeLoader`` subclasses fall under
# this; they're scoped via the per-module override below.
disallow_subclassing_any = true
# ``disallow_untyped_calls`` makes annotated callers stop silently
# inheriting ``Any`` from unannotated callees. Enabled after
# annotating five helpers (``_parse``, ``_parse_policy``, ``_first``,
# ``_first_map``, ``extract_pipe_ref``) the typed AWS / Terraform /
# CloudFormation / Bitbucket rule code calls into.
disallow_untyped_calls = true
# ``disallow_untyped_defs`` requires every function to declare its
# parameter and return types. Enabled after a 89 → 0 annotation pass
# across the AWS / Terraform / CloudFormation phase modules, every
# YAML-provider orchestrator, the Click callbacks, the YAML loader
# helpers, and the iter-* generators in ``checks/blob.py`` /
# ``checks/github/base.py``.
disallow_untyped_defs = true
# ``disallow_any_generics`` requires every generic to declare its
# type parameters — bare ``dict`` / ``list`` / ``Iterable`` /
# ``click.Choice`` are rejected. Enabled after a 226 → 0 annotation
# pass; most call sites resolved to ``dict[str, Any]`` (CFN /
# Terraform resource blocks are heterogeneously typed by upstream
# parsers) and the Click ``Choice`` parameter became ``Choice[str]``.
# The four AWS modules already in the boto3 override block also
# disable ``type-arg`` since ``boto3``'s untyped paginator output
# would otherwise require ``cast()`` at every wrapper site.
disallow_any_generics = true

# pyyaml ships without type stubs in our hash-locked lockfile, so
# ``yaml.SafeLoader`` resolves to ``Any``. The three project-side
# subclasses (the strict-key DupKeyLoader, the CFN intrinsic-tag
# loader, and the line-aware loader) inherit by design — re-enable
# subclassing for those modules until ``types-PyYAML`` lands in
# ``requirements-dev.txt``.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core._yaml_strict",
    "pipeline_check.core.checks.cloudformation.base",
    "pipeline_check.core.checks._yaml_lines",
]
disallow_subclassing_any = false

# boto3 returns ``Any`` from every paginator and ``client.*`` call.
# Functions in the AWS catalog wrap those responses and declare richer
# return types (e.g. ``list[dict[Any, Any]]``), which trips
# ``warn_return_any`` even though the runtime shape is correct. The
# proper fix is to add ``cast()`` at every site or pull in
# ``boto3-stubs`` for typing. Both are out of scope for now.
#
# ``type-arg`` is in the disable list for the same reason: spelling
# every paginator wrapper as ``list[dict[str, Any]]`` adds noise
# without precision while the underlying objects remain ``Any``. The
# rest of the codebase still enforces ``disallow_any_generics``.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core.checks.aws._catalog",
    "pipeline_check.core.checks.aws.workflows",
    "pipeline_check.core.checks.aws.base",
    "pipeline_check.core.providers.aws",
]
disable_error_code = ["no-any-return", "call-overload", "var-annotated", "union-attr", "arg-type", "type-arg"]
