[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-check"
version = "1.18.1"
description = "Security scanner for CI/CD pipelines, IaC, and cloud: GitHub Actions, GitLab CI, Terraform, Kubernetes, and more, scored against the OWASP CI/CD Top 10."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Martin" },
]
keywords = [
    "security",
    "security-scanner",
    "devsecops",
    "ci-cd",
    "cicd",
    "github-actions",
    "gitlab-ci",
    "sast",
    "static-analysis",
    "supply-chain-security",
    "vulnerability-scanner",
    "terraform",
    "cloudformation",
    "kubernetes",
    "dockerfile",
    "iac",
    "owasp",
    "compliance",
    "sarif",
    "pipeline-security",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.43.9",
    "click>=8.4.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

# Floor versions only — the hash-locked, reproducible dev install lives
# in ``requirements-dev.txt``. Install via ``make install`` or
# ``pip install --require-hashes -r requirements-dev.txt``. This extra
# is provided so ad-hoc ``pip install -e ".[dev]"`` works for
# contributors who don't want the locked tree.
[project.optional-dependencies]
dev = [
    "jsonschema>=4.0",
    "mypy>=2.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.13",
    "types-PyYAML>=6.0",
    "typing-extensions>=4.4.0",
]
# Opt-in AI augmentation (``--ai-explain CHECK-ID``). Each provider
# is its own extra so the default install carries no LLM SDKs.
# ``ai`` is a meta-extra that pulls in both hosted-provider SDKs at
# once for users who don't want to think about it.
ai-anthropic = ["anthropic>=0.102.0"]
ai-openai = ["openai>=2.37.0"]
ai = [
    "anthropic>=0.102.0",
    "openai>=2.37.0",
]
# Opt-in MCP (Model Context Protocol) server (``--serve``). Lets
# MCP-aware AI clients drive scans and query the rule catalog.
# The default install carries no MCP SDK so the AWS-Lambda /
# minimal-install paths stay slim.
mcp = ["mcp>=1.27.1"]
# Opt-in Language Server Protocol server (``python -m
# pipeline_check.lsp``). Powers the Pipeline-Check VS Code
# extension and any other LSP-aware editor. The default install
# carries no LSP SDK so the AWS-Lambda / minimal-install paths
# stay slim. Floors match the versions the extension is built
# against; older pygls/lsprotocol releases break the server.
lsp = [
    "pygls>=2.1.0",
    "lsprotocol>=2025.0.0",
]
# Opt-in direct-HCL Terraform parsing (``--tf-source``). Lets the
# scanner read raw *.tf files without requiring ``terraform plan``
# + ``terraform show -json``. Variable resolution is best-effort.
hcl = ["python-hcl2>=4.0"]
# Opt-in Azure Cloud posture scanning (``--pipeline azure_cloud``).
# Requires an Azure subscription and ``az login`` authentication.
azure-cloud = [
    "azure-identity>=1.17.0",
    "azure-keyvault-keys>=4.9.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-containerregistry>=10.0.0",
    "azure-mgmt-keyvault>=10.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-sql>=4.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-web>=7.0.0",
    "requests>=2.31.0",
]
# Opt-in GCP cloud posture scanning (``--pipeline gcp``). Requires
# a GCP project and ``gcloud auth application-default login``.
gcp = [
    "google-auth>=2.29.0",
    "google-cloud-artifact-registry>=1.11.0",
    "google-cloud-compute>=1.19.0",
    "google-cloud-functions>=1.16.0",
    "google-cloud-iam>=2.15.0",
    "google-cloud-kms>=2.21.0",
    "google-cloud-logging>=3.10.0",
    "google-cloud-org-policy>=1.11.0",
    "google-cloud-resource-manager>=1.12.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-storage>=2.16.0",
    "requests>=2.31.0",
]

[project.scripts]
# Both spellings resolve to the same entry point. ``pipeline-check``
# (hyphen) matches the PyPI/Docker/brand name users install, so typing
# the name they just installed works; ``pipeline_check`` (underscore) is
# kept for back-compat with every existing doc and script.
pipeline-check = "pipeline_check.cli:main"
pipeline_check = "pipeline_check.cli:main"

[project.urls]
Homepage = "https://dmartinochoa.github.io/pipeline-check/"
Documentation = "https://dmartinochoa.github.io/pipeline-check/"
Repository = "https://github.com/dmartinochoa/pipeline-check"
Issues = "https://github.com/dmartinochoa/pipeline-check/issues"
Changelog = "https://github.com/dmartinochoa/pipeline-check/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["pipeline_check*"]

# Non-Python data files that must ship in the wheel. Without this
# block the wheel carries only ``.py`` files, which silently
# downgrades the HTML report (no rule docstrings, no shared design
# tokens) and breaks ``html_reporter`` outright when the css file
# is missing. ``package-data`` paths are relative to each package
# root and accept globs.
[tool.setuptools.package-data]
"pipeline_check.core" = ["*.css"]
"pipeline_check.core.checks.aws.rules" = ["*.yml"]
"pipeline_check.core.checks.azure_cloud.rules" = ["*.yml"]
"pipeline_check.core.checks.gcp.rules" = ["*.yml"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    # UP042: prefer ``enum.StrEnum`` over ``class X(str, Enum)``.
    # The three project enums (Severity, Confidence, PinKind) ride
    # the older pattern intentionally: ``str(Severity.HIGH)`` returns
    # ``"Severity.HIGH"`` under ``(str, Enum)`` but ``"HIGH"`` under
    # ``StrEnum``. The current behavior is part of the user-visible
    # API (reporters, JSON output, finding fingerprints). Switching
    # would silently change serialized output.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"bench/run.py" = ["E402"]                          # sys.path setup before pipeline_check import
"pipeline_check/core/html_reporter.py" = ["E501"]  # inline CSS/JS templates
"pipeline_check/core/checks/base.py" = ["E402"]    # deferred re import after dataclass
"scripts/gen_provider_docs.py" = ["E402", "E501"]  # sys.path setup + markdown-table template strings
"scripts/gen_standards_docs.py" = ["E402"]         # sys.path setup before pipeline_check import
"scripts/gen_attack_chains_doc.py" = ["E402"]      # sys.path setup before pipeline_check import
"tests/**" = ["E501", "E402"]                        # test strings + mid-file imports for extended test classes
"tests/terraform/test_hcl_parser.py" = ["E402"]     # importorskip guard before project imports

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# All nine strict-mode flags from ``mypy --strict`` are enabled. The
# block below documents which flag did what work; everything beneath
# the bullet list is the per-flag rationale carried over from the
# incremental landings.
#   - ``no_implicit_optional`` is the modern default.
#   - ``warn_redundant_casts`` flags ``cast()`` calls that already
#     match the inferred type.
#   - ``warn_unused_ignores`` flags ``# type: ignore`` comments that
#     no longer suppress anything (rot from earlier mypy versions).
#   - ``strict_equality`` flags ``==`` between types whose values
#     can never equal (e.g. ``str == bytes``).
#   - ``check_untyped_defs`` type-checks the bodies of unannotated
#     functions instead of skipping them entirely.
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# ``disallow_subclassing_any`` flags class declarations whose base
# resolves to ``Any`` — typically caused by an upstream package
# without type stubs. Two pyyaml ``SafeLoader`` subclasses fall under
# this; they're scoped via the per-module override below.
disallow_subclassing_any = true
# ``disallow_untyped_calls`` makes annotated callers stop silently
# inheriting ``Any`` from unannotated callees. Enabled after
# annotating five helpers (``_parse``, ``_parse_policy``, ``_first``,
# ``_first_map``, ``extract_pipe_ref``) the typed AWS / Terraform /
# CloudFormation / Bitbucket rule code calls into.
disallow_untyped_calls = true
# ``disallow_untyped_defs`` requires every function to declare its
# parameter and return types. Enabled after a 89 → 0 annotation pass
# across the AWS / Terraform / CloudFormation phase modules, every
# YAML-provider orchestrator, the Click callbacks, the YAML loader
# helpers, and the iter-* generators in ``checks/blob.py`` /
# ``checks/github/base.py``.
disallow_untyped_defs = true
# ``disallow_any_generics`` requires every generic to declare its
# type parameters — bare ``dict`` / ``list`` / ``Iterable`` /
# ``click.Choice`` are rejected. Enabled after a 226 → 0 annotation
# pass; most call sites resolved to ``dict[str, Any]`` (CFN /
# Terraform resource blocks are heterogeneously typed by upstream
# parsers) and the Click ``Choice`` parameter became ``Choice[str]``.
# The four AWS modules already in the boto3 override block also
# disable ``type-arg`` since ``boto3``'s untyped paginator output
# would otherwise require ``cast()`` at every wrapper site.
disallow_any_generics = true

# pyyaml ships without type stubs in our hash-locked lockfile, so
# ``yaml.SafeLoader`` resolves to ``Any``. The three project-side
# subclasses (the strict-key DupKeyLoader, the CFN intrinsic-tag
# loader, and the line-aware loader) inherit by design — re-enable
# subclassing for those modules until ``types-PyYAML`` lands in
# ``requirements-dev.txt``.
#
# ``pipeline_check.lsp.server`` is in the same boat: pygls is an
# opt-in extra and not part of the default dev install, so
# ``pygls.lsp.server.LanguageServer`` resolves to ``Any`` in mypy and
# our ``PipelineCheckLanguageServer`` subclass would otherwise trip
# ``disallow_subclassing_any``.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core._yaml_strict",
    "pipeline_check.core.checks.cloudformation.base",
    "pipeline_check.core.checks._yaml_lines",
    "pipeline_check.lsp.server",
]
disallow_subclassing_any = false

# boto3 returns ``Any`` from every paginator and ``client.*`` call.
# Functions in the AWS catalog wrap those responses and declare richer
# return types (e.g. ``list[dict[Any, Any]]``), which trips
# ``warn_return_any`` even though the runtime shape is correct. The
# proper fix is to add ``cast()`` at every site or pull in
# ``boto3-stubs`` for typing. Both are out of scope for now.
#
# ``type-arg`` is in the disable list for the same reason: spelling
# every paginator wrapper as ``list[dict[str, Any]]`` adds noise
# without precision while the underlying objects remain ``Any``. The
# rest of the codebase still enforces ``disallow_any_generics``.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core.checks.aws._catalog",
    "pipeline_check.core.checks.aws.workflows",
    "pipeline_check.core.checks.aws.base",
    "pipeline_check.core.providers.aws",
]
disable_error_code = ["no-any-return", "call-overload", "var-annotated", "union-attr", "arg-type", "type-arg"]

# Azure Cloud provider: same situation as AWS — azure-mgmt-* SDKs
# return untyped model objects.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core.checks.azure_cloud._catalog",
    "pipeline_check.core.checks.azure_cloud.workflows",
    "pipeline_check.core.checks.azure_cloud.base",
    "pipeline_check.core.providers.azure_cloud",
]
disable_error_code = ["no-any-return", "call-overload", "var-annotated", "union-attr", "arg-type", "type-arg"]

# GCP provider: same situation — google-cloud-* SDKs return protobuf
# objects that resolve to Any.
[[tool.mypy.overrides]]
module = [
    "pipeline_check.core.checks.gcp._catalog",
    "pipeline_check.core.checks.gcp.workflows",
    "pipeline_check.core.checks.gcp.base",
    "pipeline_check.core.providers.gcp",
]
disable_error_code = ["no-any-return", "call-overload", "var-annotated", "union-attr", "arg-type", "type-arg"]
